--- a/app/globals.css
+++ b/app/globals.css
@@ -161,8 +161,8 @@ body {
 }
 
 .edu-badge-completed {
-  background: #e3edf7;
-  color: #2b5e9e;
+  background: #f4e3da;
+  color: #a96842;
 }
 
 .edu-badge-not_started {
